<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

	<PreferenceCategory android:title="@string/preference_info_app_title">
		<Preference android:key="preference_info_about_developer"
			android:title="@string/preference_info_about_developer_title"
			android:summary="@string/preference_info_about_developer_name">
			<intent android:action="android.intent.action.VIEW"
				android:data="@string/preference_info_about_developer_url" />
		</Preference>
		<Preference android:key="preference_info_about_appwebpage"
			android:title="@string/preference_info_about_appwebpage_title"
			android:summary="@string/preference_info_about_appwebpage_url">
			<intent android:action="android.intent.action.VIEW"
				android:data="@string/preference_info_about_appwebpage_url" />
		</Preference>
		<Preference android:key="preference_info_about_moreapp"
			android:title="@string/preference_info_about_moreapp_title">
			<intent android:action="android.intent.action.VIEW"
				android:data="@string/preference_info_about_moreapp_url" />
		</Preference>
		<Preference android:key="preference_info_about_email"
			android:title="@string/preference_info_about_email_title"
			android:summary="@string/preference_info_about_email_subtitle">
			<intent android:action="android.intent.action.SEND" />
		</Preference>
		<Preference android:key="preference_info_about_share"
			android:title="@string/preference_info_about_share_title">
			<intent android:action="android.intent.action.MAIN"
				android:targetPackage="com.luzi82.umawallpaper" android:targetClass="com.luzi82.umawallpaper.QRCode" />
		</Preference>
		<Preference android:key="preference_info_about_translate"
			android:title="@string/preference_info_about_translate_title">
			<intent android:action="android.intent.action.VIEW"
				android:data="@string/preference_info_about_translate_url" />
		</Preference>
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preference_info_version_title">
		<Preference android:key="preference_info_about_version"
			android:title="@string/preference_info_about_version_title" />
		<Preference android:key="preference_info_about_lib_version"
			android:title="@string/preference_info_about_lib_version_title" />
		<Preference android:key="preference_info_about_i18n_version"
			android:title="@string/preference_info_about_i18n_version_title"
			android:summary="@string/i18n_version" />
	</PreferenceCategory>

	<PreferenceCategory android:title="@string/preference_info_other_title">
		<Preference android:key="preference_info_about_xlsg"
			android:title="@string/preference_info_about_xlsg_title"
			android:summary="@string/preference_info_about_xlsg_subtitle">
			<intent android:action="android.intent.action.VIEW"
				android:data="@string/preference_info_about_xlsg_url" />
		</Preference>
	</PreferenceCategory>

</PreferenceScreen>
